  * Friendlier help output when `import` command is missing vobject extra
  * Handle encoding/decoding errors more gracefully by replacing with
    placeholder chars instead of blowing up
  * Fix `--lineart` option failing with unicode errors
  * `quick` command now prompts for which calendar to use when ambiguous
  * Fix `--nodeclined` option failing on events with aliased email
  * `add` command now supports `--end` as an alternative to `--duration`
    (michaelPotter)

v4.3.0
  * Adds 'conference' to details display (michaelhoffman)

v4.2.1
  * Remove python2 support
  * Allow flexible notion for durations (flicken) 
  * new `conflicts` command (flicken)
  * Fixed issue when locale.nl_langinfo isn't available
  * Fixed IndexError when attendee cannot be found in _DeclinedEvent (navignaw)

v4.2.0
  * Prompt user for calendar on `add' when it isn't specified
  * Add `end' time to details view
  * New `updates' command
  * Automatically use available console width

v4.1.1
  * Fixed regression on now marking
  * Fixed version string management

v4.1.0
  * Removed url shortening due to Google deprecation #440

v4.0.4
  * Minor bugfixes: conky colors, issues with setup.py

v4.0.0
  * Major code refactor: modularity, testing, PEP8 compliance
  * Bugfixes for issues reported during alpha phase

v4.0.0a4
  * Multiday events support #277
  * Fix textwrap for widechar at cut index #308
  * Fix errors attempting to import events #325

v4.0.0a3
  * No weekend option #264
  * Fixed bug with `add` and iterators #268
  * Deal with more encoding issues... #261
  * Get error from JSON object #260

v4.0.0a2
  * Support for Python3 via six

v4.0.0a1
  * Move from gflags to argparse
    This is a major, non-backwards compatible change (hence the roll up to v4)

v3.4.0
  * Support for adding attendees (jcmuller)
  * Fix crash when organizer/attendee don't have emails (tschwinge)
  * TSV export support `--no-started` (matthewdavis)